[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "loguru>=0.7.3",
    "nltk==3.9.1",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
